--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
   <artifactId>TemplateSelenium</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
- <!-- <properties>
+<properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-</properties> -->
+</properties> 
   
   <dependencies>
   	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -36,7 +36,7 @@
 	    <version>2.20.0</version>
 	</dependency>
   </dependencies>
-<!--  
+ 
     <build>
       <plugins>
         <plugin>
@@ -45,12 +45,12 @@
         <version>3.0.0-M7</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>${suiteXml}</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
       </plugins>
     </build> 
 
-  -->
+
 </project>
